added seo description and beamanalytics

--- a/index.html
+++ b/index.html
@@ -3,13 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://beamanalytics.b-cdn.net/beam.min.js"
+      data-token="0d7c94cd-590e-427b-ac3f-3cd60c8e16d9"
+      async
+    ></script>
     <title>rtcXf - Coming Soon</title>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="rtcXf is an open-source WebRTC monitoring and debugging tool offering real-time call insights and analytics."
+    />
+    <meta
+      name="keywords"
+      content="rtcxf, WebRTC tool, call monitoring, WebRTC debugging, real-time insights, open-source rtc tools"
+    />
+    <meta name="author" content="rtcXf" />
+
+    <!-- Open Graph Meta Tags for better sharing -->
+    <meta
+      property="og:title"
+      content="rtcXf - WebRTC Monitoring & Debugging Tool"
+    />
+    <meta
+      property="og:description"
+      content="Open-source WebRTC monitoring and debugging tool for real-time call insights."
+    />
+    <meta property="og:image" content="https://rtcxf.com/logox.png" />
+    <meta property="og:url" content="https://rtcxf.com/" />
+    <meta property="og:type" content="website" />
+    <!-- Preload & Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
-    <link rel="icon" href="logox.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="logox.png" type="image/png" />
+
     <style>
       /* Reset and base styles */
       * {
@@ -19,7 +58,7 @@
       }
 
       body {
-        font-family: 'Orbitron', sans-serif; 
+        font-family: "Orbitron", sans-serif;
         letter-spacing: 0.25cap;
         background-color: #000;
         color: #fff;
@@ -47,7 +86,7 @@
         align-items: center;
         font-size: 1.5rem;
         font-weight: 700;
-        font-family: 'Orbitron', sans-serif;
+        font-family: "Orbitron", sans-serif;
         letter-spacing: 0.1em;
       }
 
